# sbs1-eventhubs-bridge

./: .gitignore  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  compile_commands.json  sbs1-eventhub-bridge
cmake/: FindEVENTHUB_CLIENT.cmake  FindEVENTHUB_COMMON.cmake  FindQPID_PROTON.cmake
src/bridge/: eventhub_client.c  eventhub_client.h  main.c  sbs1_client.c  sbs1_client.h
